<resources>
    <string name="app_name">RestReminders</string>
    <string name="app_name_2">提醒者</string>
    <string name="app_version">版本：1.0</string>
    <string name="app_description">提醒者是一款可以提醒程序员定时休息的软件</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="status_no_task">没有任务正在执行</string>
    <string name="text_more">更多</string>
    <string name="text_title">标题</string>
    <string name="text_config_work">工作提醒配置</string>
    <string name="text_start_work">开始工作</string>
    <string name="text_continue_work">继续工作</string>
    <string name="text_pause">暂停</string>
    <string name="text_worked">已经工作了</string>
    <string name="text_not_open">未开启</string>
    <string name="text_woring">工作中</string>
    <string name="text_resting">休息中</string>
    <string name="text_add">添加</string>
    <string name="text_goto_settings_edit_more">转到设置编辑更多</string>
    <string name="text_add_custom_condition">添加自定义条件</string>
    <string name="text_set_custom_condition">设置自定义条件</string>
    <string name="text_is_enabled">是否启用</string>
    <string name="text_sure_quit">您确认要退出吗？退出后将不能为您进行提醒了</string>
    <string name="text_settings">设置</string>
    <string name="text_worktime">工作时间段</string>
    <string name="text_edit">编辑</string>
    <string name="text_finish">完成</string>
    <string name="text_enable">启用</string>
    <string name="text_disable">禁用</string>
    <string name="text_work_time_state_changed">已经 %s 工作时间段</string>
    <string name="text_edit_worktime">编辑工作时间段</string>
    <string name="text_work_config">工作参数配置</string>
    <string name="text_zerotime">00:00</string>
    <string name="text_work_once_hours">单次工作时长</string>
    <string name="text_rest_once_time">单次休息时长</string>
    <string name="text_work_urgency">工作紧急程度</string>
    <string name="text_start_time">开始时间</string>
    <string name="text_end_time">结束时间</string>
    <string name="text_minute">分钟</string>
    <string name="text_select_work_urgency">选择工作紧急程度</string>
    <string name="text_max_time">最长时间</string>
    <string name="text_min_time">最短时间</string>
    <string name="text_minute_range">%d-%d 分钟</string>
    <string name="text_must_greater_than_zero">%s 必须大于 0 </string>
    <string name="text_must_greater_than">%s 必须大于 %s</string>
    <string name="text_from_to">%s 至 %s</string>
    <string name="text_must_enter">请输入 %s</string>
    <string name="text_am">上午</string>
    <string name="text_pm">下午</string>
    <string name="text_press_again_to_quit">再按一次返回到桌面</string>
    <string name="text_placeholder">占位符，ABC</string>
    <string name="text_i_knew">我知道了</string>
    <string name="text_welecome">欢迎使用提醒者</string>
    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_delete">删除</string>
    <string name="text_repeat">重复</string>
    <string name="text_repeat_type">重复类型</string>
    <string name="text_customize">自定义</string>
    <string name="text_repeat_once">仅一次</string>
    <string name="text_repeat_today">仅今天</string>
    <string name="text_repeat_everyday">每天重复</string>
    <string name="text_repeat_workday">法定工作日</string>
    <string name="text_repeat_holiday">法定节假日</string>
    <string name="text_repeat_mon_to_fir">周一至周五</string>
    <string name="text_repeat_mon_to_sat">周一至周六</string>
    <string name="text_repeat_sun_to_fir">周日至周五</string>
    <string name="text_repeat_sat_to_sun">周六至周日</string>
    <string name="text_sat">周六</string>
    <string name="text_sun">周日</string>
    <string name="text_mon">周一</string>
    <string name="text_tue">周二</string>
    <string name="text_thu">周三</string>
    <string name="text_wed">周四</string>
    <string name="text_fir">周五</string>
    <string name="text_add_custom_date">添加自定义日期</string>
    <string name="text_tip">消息提示</string>
    <string name="text_sure_delete_worktime">确定要删除这个工作时间吗？</string>
    <string name="text_delete_ask">删除提示</string>
    <string name="tab_reset_status">休息提醒</string>
    <string name="tab_todo">待办</string>
    <string name="tab_note">随手记</string>
    <string name="tab_center">我的</string>
    <string name="action_settings">设置</string>
    <string name="action_quit">退出</string>
    <string name="action_help">帮助</string>
    <string name="action_about">关于</string>
    <string name="action_back">返回</string>
    <string name="text_agreement_base_welecome">
        欢迎使用 AutoCalc ！
        \nAutoCalc 非常重视您的隐私和个人信息保护。
        \n在您使用 AutoCalc 前，请认真阅读 <a href="https://imyzc.com/t?x=autocalc_argeement">《用户协议》</a> 及 <a href="https://imyzc.com/t?x=privacy_policy">《隐私政策》</a> ，您同意并接受全部条款后方可开始使用“AutoCalc”。
        \n另外为了更好地使用产品功能，需征求您的允许，获得以下权限：
    </string>
    <string name="text_agreement_base"><a href="https://imyzc.com/t?x=autocalc_argeement">《用户协议》</a>\n<a href="https://imyzc.com/t?x=privacy_policy">《隐私政策》</a>
        \n\n为了更好地使用产品功能，应用还征求您的允许获得以下权限：
    </string>
    <string name="text_agreement_devinfo">设备信息</string>
    <string name="text_agreement_devinfo_sub">包括设备ID/屏幕尺寸/操作系统/设备型号/网络连接模式/移动国家代码/屏幕分辨率及系统语言；用于根据不同的设备及系统版本来提供不同的功能和体验，获取产品的使用情况及Bug信息，帮助我们不断改进产品功能和体验。</string>
    <string name="text_agreement_interenet">网络</string>
    <string name="text_agreement_interenet_sub">
        包括IP地址；我们需要联网下载计算数据；以及帮助我们统计产品使用情况、反馈产品BUG，帮助我们不断改进产品功能和体验。
    </string>
    <string name="text_agreement_write_storage">读写存储</string>
    <string name="text_agreement_write_storage_sub">
        我们需要临时写入程序数据、程序计算缓存等等。
    </string>
    <string name="text_agreement_lost">如果您不同意或拒绝授予这些权限，您将无法使用 App 的部分或全部功能。</string>
    <string name="text_agreement_allow">同意并继续</string>
    <string name="text_agreement_not_allow">不同意并退出</string>
    <string name="title_activity_main">提醒者</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_help">帮助文档</string>
    <string name="title_exception">抱歉！应用发生了异常</string>
    <string name="settings_key_privacy_policy">隐私政策与许可协议</string>
    <string name="settings_key_use_24_hours_title">使用 24 小时制</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
</resources>