<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="219dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <com.dreamfish.restreminders.widget.MyTitleBar
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:left_icon="@drawable/ic_menu">

        </com.dreamfish.restreminders.widget.MyTitleBar>

        <com.dreamfish.restreminders.widget.MainTimerCanvases
            android:id="@+id/main_timer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_timer_workstate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/text_not_open" />

            <TextView
                android:id="@+id/text_timer_main_top_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_worked"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_timer_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_zerotime"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_start"
                    style="@style/ButtonRoundPrimary"
                    android:layout_width="103dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_start_work" />

                <Button
                    android:id="@+id/btn_pause"
                    style="@style/ButtonRoundPrimary"
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pause" />

                <ImageButton
                    android:id="@+id/btn_settings"
                    style="@style/ButtonRound"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_cog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_rest_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/text_placeholder" />

                <TextView
                    android:id="@+id/text_rest_info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_placeholder" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border_top"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/btn_settings_back"
                style="@style/ButtonCommon"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/action_back"
                app:srcCompat="@drawable/ic_down" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/text_config_work"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="55dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/view_work_time_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_top_dash"
                        android:orientation="vertical"
                        android:padding="15dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/text_worktime" />

                        <com.dreamfish.restreminders.widget.DrawableCenterButton
                            android:id="@+id/btn_add_worktime"
                            style="@style/ButtonCommonRound"
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:layout_marginTop="15dp"
                            android:drawableStart="@drawable/ic_add_small"
                            android:text="@string/text_add"
                            android:textAlignment="textStart" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/view_work_time_config"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_top_dash"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/text_work_config" />

                        <com.allen.library.SuperTextView
                            android:id="@+id/text_work_urgency"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            app:sLeftTextString="@string/text_work_urgency"
                            app:sRightTextColor="@color/colorPrimary"
                            app:sRightTextString="一般" />

                        <com.allen.library.SuperTextView
                            android:id="@+id/text_workhours_set"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            app:sLeftTextString="@string/text_work_once_hours"
                            app:sRightTextColor="@color/colorPrimary"
                            app:sRightTextString="45-110 分钟" />

                        <com.allen.library.SuperTextView
                            android:id="@+id/text_reset_time_set"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            app:sLeftTextString="@string/text_rest_once_time"
                            app:sRightTextColor="@color/colorPrimary"
                            app:sRightTextString="15-20 分钟" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_top_dash"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <Button
                            android:id="@+id/btn_goto_setting"
                            style="@style/ButtonRound"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_goto_settings_edit_more" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>